--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -5,7 +5,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:fitsSystemWindows="true"
-tools:context="DetailActivity">
+tools:context=".ui.DetailActivity">
 
 <!-- Adding an image to the prominent top app bar:
      Reference: https://material.io/components/app-bars-top/android#regular-top-app-bar -->
